--- a/index.html
+++ b/index.html
@@ -8,54 +8,53 @@
 </head>
 
 <body>
+    <!-- HEADER, BRAND E MENU DE NAVEGACAO -->
     <header>
-        <div class="logo">
-            <img src="img/bikcraft.svg" alt="logo">
-        </div>
-        <div class="menu">
-            <a href="/">SOBRE</a>
-            <a href="/">PRODUTOS</a>
-            <a href="/">LOJAS</a>
-            <a href="/">CONTATOS</a>
-        </div>
+        <img src="img/bikcraft.svg" alt="logo">
+        <nav>
+            <ul>
+                <li><a href="">sobre</a></li>
+                <li><a href="">produtos</a></li>
+                <li><a href="">lojas</a></li>
+                <li><a href="">contatos</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
-        <div class="grid">
-            <div class="box-01">
-                <h1>Bicicleta Feitas a Mão</h1>
-                <p>A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios da marca</p>
-                <div class="btn">
-                    <a href="/">VER MAIS</a>
-                </div>
+        <article class="box-01">
+            <h1>Bicicleta Feitas a Mão</h1>
+            <p>A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios da marca</p>
+            <div class="btn">
+                <a href="/">VER MAIS</a>
             </div>
-            <div class="box-02">
-                <img src="img/bicicleta.jpg" alt="bike">
-            </div>
-            <div class="box-03">
-                <h2>VANTAGENS BIKCRAFT</h2>
-            </div>
-            <div class="box-04">
+        </article>
+        <div class="box-02">
+            <img src="img/bicicleta.jpg" alt="bike">
+        </div>
+        <div class="box-03">
+            <h2>vantagens bikecraft</h2>
+        </div>
+        <div class="box-04">
+            <div class="row">
                 <div class="icon-descri">
                     <img src="img/eletrica.svg" alt="">
                     <h2>Motor Elétrico</h2>
                 </div>
-                <div class="icon-descri-text">
-                    <p>Permite você viajar distâncias inimaginaveis com sua bike.</p>
-                </div>
+                <p>Permite você viajar distâncias inimaginaveis com sua bike.</p>
+            </div>
+            <div class="row">
                 <div class="icon-descri">
                     <img src="img/velocidade.svg" alt="">
                     <h2>40 km/h</h2>
                 </div>
-                <div class="icon-descri-text">
-                    <p>A mais rápida bicicleta elétrica disponível hoje no mercado.</p>
-                </div>
+                <p>A mais rápida bicicleta elétrica disponível hoje no mercado.</p>
+            </div>
+            <div class="row">
                 <div class="icon-descri">
                     <img src="img/rastreador.svg" alt="">
                     <h2>Rastreador</h2>
                 </div>
-                <div class="icon-descri-text">
-                    <p>Rastreador e sistema anti-furto para garantir o seu sossego.</p>
-                </div>
+                <p>Rastreador e sistema anti-furto para garantir o seu sossego.</p>
             </div>
         </div>
     </main>
