--- a/index.html
+++ b/index.html
@@ -1,66 +1,65 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html>
 
 <head>
-    <meta charset="UTF-8">
-    <title>Bikcraft</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Bikcraft</title>
+  <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
-    <!-- HEADER, BRAND E MENU DE NAVEGACAO -->
-    <header>
-        <img src="img/bikcraft.svg" alt="logo">
-        <nav>
-            <ul>
-                <li><a href="">sobre</a></li>
-                <li><a href="">produtos</a></li>
-                <li><a href="">lojas</a></li>
-                <li><a href="">contatos</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <article class="box-01">
-            <h1>Bicicleta Feitas a Mão</h1>
-            <p>A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios da marca</p>
-            <div class="btn">
-                <a href="/">VER MAIS</a>
-            </div>
-        </article>
-        <div class="box-02">
-            <img src="img/bicicleta.jpg" alt="bike">
-        </div>
-        <div class="box-03">
-            <h2>vantagens bikecraft</h2>
-        </div>
-        <div class="box-04">
-            <div class="row">
-                <div class="icon-descri">
-                    <img src="img/eletrica.svg" alt="">
-                    <h2>Motor Elétrico</h2>
-                </div>
-                <p>Permite você viajar distâncias inimaginaveis com sua bike.</p>
-            </div>
-            <div class="row">
-                <div class="icon-descri">
-                    <img src="img/velocidade.svg" alt="">
-                    <h2>40 km/h</h2>
-                </div>
-                <p>A mais rápida bicicleta elétrica disponível hoje no mercado.</p>
-            </div>
-            <div class="row">
-                <div class="icon-descri">
-                    <img src="img/rastreador.svg" alt="">
-                    <h2>Rastreador</h2>
-                </div>
-                <p>Rastreador e sistema anti-furto para garantir o seu sossego.</p>
-            </div>
-        </div>
-    </main>
-    <footer>
-        <p>Bikecraft Alguns Direitos Reservados</p>
-    </footer>
+
+  <header class="header">
+    <img src="./img/bikcraft.svg" alt="Bikcraft">
+
+    <nav aria-label="primária">
+      <ul class="menu">
+        <li><a href="/">Sobre</a></li>
+        <li><a href="/">Produtos</a></li>
+        <li><a href="/">Lojas</a></li>
+        <li><a href="/">Contato</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+    <article class="conteudo" aria-labelledby="label-introducao">
+      <div class="introducao">
+        <h1 id="label-introducao">Bicicletas Feitas a Mão</h1>
+        <p>A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios da marca.</p>
+        <a class="botao" href="/">Ver Mais</a>
+      </div>
+      <div class="introducao-cover">
+        <img src="./img/bicicleta.jpg" alt="Bicicleta Bikcraft Preta">
+      </div>
+    </article>
+
+    <article class="conteudo conteudo-vantagem" aria-labelledby="label-vantagens">
+      <h2 class="subtitulo" id="label-vantagens">Vantagens Bikcraft</h2>
+      <ul class="vantagens">
+        <li class="vantagens-item">
+          <img src="./img/eletrica.svg" alt="">
+          <h3>Motor Elétrico</h3>
+          <p>Permite você viajar distâncias inimaginaveis com a sua bike.</p>
+        </li>
+        <li class="vantagens-item">
+          <img src="./img/velocidade.svg" alt="">
+          <h3>40 km/h</h3>
+          <p>A mais rápida bicicleta elétrica disponível hoje no mercado.</p>
+        </li>
+        <li class="vantagens-item">
+          <img src="./img/rastreador.svg" alt="">
+          <h3>Rastreador</h3>
+          <p>Rastreador e sistema anti-furto para garantir o seu sossego.</p>
+        </li>
+      </ul>
+    </article>
+  </main>
+
+  <footer class="rodape">
+    <p>Bikcraft. Alguns Direitos Reservados.</p>
+  </footer>
 </body>
 
 </html>
